v1.0.1/_sources/Arbiter_links.rst.txt

Links
-----

.. csv-table::
    :header: Owner A, Item A, Owner B, Item B
    :align: center

        InputDst, PMPS_Arbiter.fbSubSys1_Requestor.i_Connected, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 3 (EK1122)^SubSysPLC1, SYNC Inputs^External device not connected
        InputDst, PMPS_Arbiter.fbSubSys1_Requestor.i_RequestedBP, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 3 (EK1122)^SubSysPLC1, IO Inputs^RequestedBP
        InputDst, PMPS_Arbiter.fbSubSys1_Requestor.i_RequestedBP, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 3 (EK1122)^SubSysPLC1, IO Inputs^RequestedBP
        InputDst, PMPS_Arbiter.fbSubSys1_Requestor.i_TxPDOState, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 3 (EK1122)^SubSysPLC1, SYNC Inputs^TxPDO state
        InputDst, PMPS_Arbiter.fbSubSys1_Requestor.i_WcState, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 3 (EK1122)^SubSysPLC1, WcState^WcState
        InputDst, PMPS_Arbiter.fbSubSys2_PMPS_IO.i_xNewRequest, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 3 (EK1122)^SubSysPLC2, IO Inputs^xNewRequest
        InputDst, PMPS_Arbiter.fbSubSys2_Requestor.i_Connected, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 3 (EK1122)^SubSysPLC2, SYNC Inputs^External device not connected
        InputDst, PMPS_Arbiter.fbSubSys2_Requestor.i_RequestedBP, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 3 (EK1122)^SubSysPLC2, IO Inputs^RequestedBP
        InputDst, PMPS_Arbiter.fbSubSys2_Requestor.i_RequestedBP, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 3 (EK1122)^SubSysPLC2, IO Inputs^RequestedBP
        InputDst, PMPS_Arbiter.fbSubSys2_Requestor.i_TxPDOState, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 3 (EK1122)^SubSysPLC2, SYNC Inputs^TxPDO state
        InputDst, PMPS_Arbiter.fbSubSys2_Requestor.i_WcState, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 3 (EK1122)^SubSysPLC2, WcState^WcState
        InputDst, PMPS_Arbiter.lfe_PMPS_IO.i_Connected, TIID^Device 1 (EtherCAT)^Box 23 (CU1128)^plc-lfe-motion, SYNC Inputs^External device not connected
        InputDst, PMPS_Arbiter.lfe_PMPS_IO.i_RequestedBP, TIID^Device 1 (EtherCAT)^Box 23 (CU1128)^plc-lfe-motion, IO Inputs^RequestedBP
        InputDst, PMPS_Arbiter.lfe_PMPS_IO.i_TxPDOState, TIID^Device 1 (EtherCAT)^Box 23 (CU1128)^plc-lfe-motion, SYNC Inputs^TxPDO state
        InputDst, PMPS_Arbiter.st3k4Watcher.i_StopperInLS, TIID^Device 1 (EtherCAT)^E0 (EK1200)^E3 (EK1122)^950-101W-R4-MPS-2^PPS Stoppers 1, Channel 1^ST3K4 IN
        InputDst, PMPS_Arbiter.st3k4Watcher.i_StopperOutLS, TIID^Device 1 (EtherCAT)^E0 (EK1200)^E3 (EK1122)^950-101W-R4-MPS-2^PPS Stoppers 1, Channel 2^ST3K4 OUT
        InputDst, P_AT1K0_SL1K0.i_nTranToAT1K0Stat, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-gatt, IO Inputs^Current Transmission
        InputDst, P_SATT.i_nTranToStat_KFE, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-motion, IO Inputs^SattArrayStatus
        InputDst, P_SATT.i_nTranToStat_RIX, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^B940-009-R07-MPS-1 CU1-ESC2^plc-rix-mot, IO Inputs^SattArrayStatus
        KFEArbiter Instance, FFOTask Outputs^GVL.g_FastFaultOutput2.q_xFastFaultOut, TIID^Device 1 (EtherCAT)^E0 (EK1200)^FFO, Channel 2^Output
        KFEArbiter Instance, PlcTask Inputs^CurrentBPUpdate.i_MR1K1_ENC, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^B940-009-R07-MPS-1 CU1-ESC2^plc-rix-optics, IO Inputs^MR1K1_Y_ENC
        KFEArbiter Instance, PlcTask Inputs^CurrentBPUpdate.st1k2Watcher.i_StopperInLS, TIID^Device 1 (EtherCAT)^E0 (EK1200)^E3 (EK1122)^950-101W-R4-MPS-2^PPS Stoppers 1, Channel 3^ST1K2 IN
        KFEArbiter Instance, PlcTask Inputs^CurrentBPUpdate.st1k2Watcher.i_StopperOutLS, TIID^Device 1 (EtherCAT)^E0 (EK1200)^E3 (EK1122)^950-101W-R4-MPS-2^PPS Stoppers 1, Channel 4^ST1K2 OUT
        KFEArbiter Instance, PlcTask Inputs^CurrentBPUpdate.st3k4Watcher.i_StopperInLS, TIID^Device 1 (EtherCAT)^E0 (EK1200)^E3 (EK1122)^950-101W-R4-MPS-2^PPS Stoppers 1, Channel 1^ST3K4 IN
        KFEArbiter Instance, PlcTask Inputs^CurrentBPUpdate.st3k4Watcher.i_StopperOutLS, TIID^Device 1 (EtherCAT)^E0 (EK1200)^E3 (EK1122)^950-101W-R4-MPS-2^PPS Stoppers 1, Channel 2^ST3K4 OUT
        KFEArbiter Instance, PlcTask Inputs^MAIN.fbEcatDiag.arrEcMasterNetId, TIID^Device 1 (EtherCAT), InfoData^AmsNetId
        KFEArbiter Instance, PlcTask Inputs^MAIN.fbEcatDiag.nEcMasterDevState, TIID^Device 1 (EtherCAT), Inputs^DevState
        KFEArbiter Instance, PlcTask Inputs^MAIN.fbEcatDiag.nEcMasterDeviceId, TIID^Device 1 (EtherCAT), InfoData^DevId
        KFEArbiter Instance, PlcTask Inputs^MAIN.fbEcatDiag.nEcMasterSlaveCount, TIID^Device 1 (EtherCAT), Inputs^SlaveCount
        KFEArbiter Instance, PlcTask Inputs^MAIN.fbEcatDiag.nEcMasterSlaveCountCfg, TIID^Device 1 (EtherCAT), InfoData^CfgSlaveCount
        KFEArbiter Instance, PlcTask Inputs^MAIN.fbEcatDiag.wFrmXWcState, TIID^Device 1 (EtherCAT), Inputs^Frm1WcState
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_kfe_gatt_PMPS_IO.i_Connected, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-gatt, SYNC Inputs^External device not connected
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_kfe_gatt_PMPS_IO.i_RequestedBP, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-gatt, IO Inputs^RequestedBP
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_kfe_gatt_PMPS_IO.i_TxPDOState, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-gatt, SYNC Inputs^TxPDO state
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_kfe_gatt_PMPS_IO.i_WcState, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-gatt, WcState^WcStateIn
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_kfe_gmd_PMPS_IO.i_Connected, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-gmd-vac-01, SYNC Inputs^External device not connected
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_kfe_gmd_PMPS_IO.i_RequestedBP, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-gmd-vac-01, IO Inputs^RequestedBP
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_kfe_gmd_PMPS_IO.i_TxPDOState, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-gmd-vac-01, SYNC Inputs^TxPDO state
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_kfe_gmd_PMPS_IO.i_WcState, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-gmd-vac-01, WcState^WcStateIn
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_kfe_motion_PMPS_IO.i_Connected, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-motion, SYNC Inputs^External device not connected
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_kfe_motion_PMPS_IO.i_RequestedBP, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-motion, IO Inputs^RequestedBP
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_kfe_motion_PMPS_IO.i_TxPDOState, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-motion, SYNC Inputs^TxPDO state
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_kfe_motion_PMPS_IO.i_WcState, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-motion, WcState^WcStateIn
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_kfe_vac_PMPS_IO.i_Connected, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-vac, SYNC Inputs^External device not connected
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_kfe_vac_PMPS_IO.i_RequestedBP, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-vac, IO Inputs^RequestedBP
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_kfe_vac_PMPS_IO.i_TxPDOState, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-vac, SYNC Inputs^TxPDO state
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_kfe_vac_PMPS_IO.i_WcState, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-vac, WcState^WcStateIn
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_kfe_xgmd_PMPS_IO.i_Connected, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-xgmd-vac-01, SYNC Inputs^External device not connected
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_kfe_xgmd_PMPS_IO.i_RequestedBP, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-xgmd-vac-01, IO Inputs^RequestedBP
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_kfe_xgmd_PMPS_IO.i_TxPDOState, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-xgmd-vac-01, SYNC Inputs^TxPDO state
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_kfe_xgmd_PMPS_IO.i_WcState, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-xgmd-vac-01, WcState^WcStateIn
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_rix_mot_PMPS_IO.i_Connected, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^B940-009-R07-MPS-1 CU1-ESC2^plc-rix-mot, SYNC Inputs^External device not connected
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_rix_mot_PMPS_IO.i_RequestedBP, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^B940-009-R07-MPS-1 CU1-ESC2^plc-rix-mot, IO Inputs^RequestedBP
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_rix_mot_PMPS_IO.i_TxPDOState, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^B940-009-R07-MPS-1 CU1-ESC2^plc-rix-mot, SYNC Inputs^TxPDO state
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_rix_mot_PMPS_IO.i_WcState, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^B940-009-R07-MPS-1 CU1-ESC2^plc-rix-mot, WcState^WcStateIn
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_rix_optics_PMPS_IO.i_Connected, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^B940-009-R07-MPS-1 CU1-ESC2^plc-rix-optics, SYNC Inputs^External device not connected
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_rix_optics_PMPS_IO.i_RequestedBP, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^B940-009-R07-MPS-1 CU1-ESC2^plc-rix-optics, IO Inputs^RequestedBP
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_rix_optics_PMPS_IO.i_TxPDOState, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^B940-009-R07-MPS-1 CU1-ESC2^plc-rix-optics, SYNC Inputs^TxPDO state
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_rix_optics_PMPS_IO.i_WcState, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^B940-009-R07-MPS-1 CU1-ESC2^plc-rix-optics, WcState^WcStateIn
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_rix_vac_PMPS_IO.i_Connected, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^B940-009-R07-MPS-1 CU1-ESC2^plc-rix-vac, SYNC Inputs^External device not connected
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_rix_vac_PMPS_IO.i_RequestedBP, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^B940-009-R07-MPS-1 CU1-ESC2^plc-rix-vac, IO Inputs^RequestedBP
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_rix_vac_PMPS_IO.i_TxPDOState, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^B940-009-R07-MPS-1 CU1-ESC2^plc-rix-vac, SYNC Inputs^TxPDO state
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_rix_vac_PMPS_IO.i_WcState, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^B940-009-R07-MPS-1 CU1-ESC2^plc-rix-vac, WcState^WcStateIn
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_tmo_motion_PMPS_IO.i_Connected, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-tmo-mot, SYNC Inputs^External device not connected
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_tmo_motion_PMPS_IO.i_RequestedBP, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-tmo-mot, IO Inputs^RequestedBP
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_tmo_motion_PMPS_IO.i_TxPDOState, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-tmo-mot, SYNC Inputs^TxPDO state
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_tmo_motion_PMPS_IO.i_WcState, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-tmo-mot, WcState^WcStateIn
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_tmo_optics_PMPS_IO.i_Connected, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-tmo-optics, SYNC Inputs^External device not connected
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_tmo_optics_PMPS_IO.i_RequestedBP, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-tmo-optics, IO Inputs^RequestedBP
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_tmo_optics_PMPS_IO.i_TxPDOState, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-tmo-optics, SYNC Inputs^TxPDO state
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_tmo_optics_PMPS_IO.i_WcState, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-tmo-optics, WcState^WcStateIn
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_tmo_vacuum_PMPS_IO.i_Connected, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-tmo-vac, SYNC Inputs^External device not connected
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_tmo_vacuum_PMPS_IO.i_RequestedBP, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-tmo-vac, IO Inputs^RequestedBP
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_tmo_vacuum_PMPS_IO.i_TxPDOState, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-tmo-vac, SYNC Inputs^TxPDO state
        KFEArbiter Instance, PlcTask Inputs^PMPS_Arbiter.plc_tmo_vacuum_PMPS_IO.i_WcState, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-tmo-vac, WcState^WcStateIn
        KFEArbiter Instance, PlcTask Inputs^P_AT1K0_SL1K0.i_bWcStateIn_AT1K0, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-gatt, WcState^WcStateIn
        KFEArbiter Instance, PlcTask Inputs^P_AT1K0_SL1K0.i_bWcStateIn_KFEMOT, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-motion, WcState^WcStateIn
        KFEArbiter Instance, PlcTask Inputs^P_AT1K0_SL1K0.i_bWcStateOut_AT1K0, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-gatt, WcState^WcStateOut
        KFEArbiter Instance, PlcTask Inputs^P_AT1K0_SL1K0.i_bWcStateOut_KFEMOT, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-motion, WcState^WcStateOut
        KFEArbiter Instance, PlcTask Inputs^P_AT1K0_SL1K0.i_nState_AT1K0, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-gatt, InfoData^State
        KFEArbiter Instance, PlcTask Inputs^P_AT1K0_SL1K0.i_nState_KFEMOT, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-motion, InfoData^State
        KFEArbiter Instance, PlcTask Inputs^P_AT1K0_SL1K0.i_nTranToAT1K0Stat, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-gatt, IO Inputs^Current Transmission
        KFEArbiter Instance, PlcTask Inputs^P_AT1K0_SL1K0.i_stAptArrayStat, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-motion, IO Inputs^AptArrayStatus
        KFEArbiter Instance, PlcTask Inputs^P_SATT.i_SattArrayStatus_KFE, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-motion, IO Inputs^SattArrayStatus
        KFEArbiter Instance, PlcTask Inputs^P_SATT.i_SattArrayStatus_RIX, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^B940-009-R07-MPS-1 CU1-ESC2^plc-rix-mot, IO Inputs^SattArrayStatus
        KFEArbiter Instance, PlcTask Inputs^P_SATT.i_bWcStateIn_kfe_mot, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-motion, WcState^WcStateIn
        KFEArbiter Instance, PlcTask Inputs^P_SATT.i_bWcStateIn_rix_mot, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^B940-009-R07-MPS-1 CU1-ESC2^plc-rix-mot, WcState^WcStateIn
        KFEArbiter Instance, PlcTask Inputs^P_SATT.i_bWcStateOut_kfe_mot, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-motion, WcState^WcStateOut
        KFEArbiter Instance, PlcTask Inputs^P_SATT.i_bWcStateOut_rix_mot, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^B940-009-R07-MPS-1 CU1-ESC2^plc-rix-mot, WcState^WcStateOut
        KFEArbiter Instance, PlcTask Inputs^P_SATT.i_nState_kfe_mot, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-motion, InfoData^State
        KFEArbiter Instance, PlcTask Inputs^P_SATT.i_nState_rix_mot, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^B940-009-R07-MPS-1 CU1-ESC2^plc-rix-mot, InfoData^State
        KFEArbiter Instance, PlcTask Outputs^CurrentBPUpdate.q_MR1K1_VETO, TIID^Device 1 (EtherCAT)^E0 (EK1200)^PMPS_Premp, Channel 13^MR1K1 IN
        KFEArbiter Instance, PlcTask Outputs^CurrentBPUpdate.q_rPhotonEnergy, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^B940-009-R07-MPS-1 CU1-ESC2^plc-rix-mot, IO Outputs^rPhotonEnergy
        KFEArbiter Instance, PlcTask Outputs^CurrentBPUpdate.q_rPhotonEnergy, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^B940-009-R07-MPS-1 CU1-ESC2^plc-rix-optics, IO Outputs^rPhotonEnergy
        KFEArbiter Instance, PlcTask Outputs^CurrentBPUpdate.q_rPhotonEnergy, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-gatt, IO Outputs^rPhotonEnergy
        KFEArbiter Instance, PlcTask Outputs^CurrentBPUpdate.q_rPhotonEnergy, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-motion, IO Outputs^rPhotonEnergy
        KFEArbiter Instance, PlcTask Outputs^CurrentBPUpdate.st1k2Watcher.q_StopperIN_Relay, TIID^Device 1 (EtherCAT)^E0 (EK1200)^PMPS_Premp, Channel 14^ST1K2 RELAY IN
        KFEArbiter Instance, PlcTask Outputs^CurrentBPUpdate.st3k4Watcher.q_StopperIN_Relay, TIID^Device 1 (EtherCAT)^E0 (EK1200)^PMPS_Premp, Channel 12^ST3K4 RELAY IN
        KFEArbiter Instance, PlcTask Outputs^GVL.g_FastFaultOutput1.q_xFastFaultOut, TIID^Device 1 (EtherCAT)^E0 (EK1200)^FFO, Channel 1^Output
        KFEArbiter Instance, PlcTask Outputs^MAIN.bM1K1_OUT_Override, TIID^Device 1 (EtherCAT)^E0 (EK1200)^PMPS_Premp, Channel 8^Output
        KFEArbiter Instance, PlcTask Outputs^PMPS_Arbiter.fbCuInterface.q_CLTS_ASSERTION_LINES[1], TIID^Device 1 (EtherCAT)^E0 (EK1200)^PMPS_Premp, Channel 9^Output
        KFEArbiter Instance, PlcTask Outputs^PMPS_Arbiter.fbCuInterface.q_CLTS_ASSERTION_LINES[2], TIID^Device 1 (EtherCAT)^E0 (EK1200)^PMPS_Premp, Channel 10^Output
        KFEArbiter Instance, PlcTask Outputs^PMPS_Arbiter.fbCuInterface.q_CLTS_ASSERTION_LINES[3], TIID^Device 1 (EtherCAT)^E0 (EK1200)^PMPS_Premp, Channel 11^Output
        KFEArbiter Instance, PlcTask Outputs^PMPS_Arbiter.fbMPSInterface.q_BC_ASSERTION_LINES[1], TIID^Device 1 (EtherCAT)^E0 (EK1200)^PMPS_Premp, Channel 1^Output
        KFEArbiter Instance, PlcTask Outputs^PMPS_Arbiter.fbMPSInterface.q_BC_ASSERTION_LINES[2], TIID^Device 1 (EtherCAT)^E0 (EK1200)^PMPS_Premp, Channel 2^Output
        KFEArbiter Instance, PlcTask Outputs^PMPS_Arbiter.fbMPSInterface.q_BC_ASSERTION_LINES[3], TIID^Device 1 (EtherCAT)^E0 (EK1200)^PMPS_Premp, Channel 3^Output
        KFEArbiter Instance, PlcTask Outputs^PMPS_Arbiter.fbMPSInterface.q_BC_ASSERTION_LINES[4], TIID^Device 1 (EtherCAT)^E0 (EK1200)^PMPS_Premp, Channel 4^Output
        KFEArbiter Instance, PlcTask Outputs^PMPS_Arbiter.fbMPSInterface.q_BC_ASSERTION_LINES[5], TIID^Device 1 (EtherCAT)^E0 (EK1200)^PMPS_Premp, Channel 5^Output
        KFEArbiter Instance, PlcTask Outputs^PMPS_Arbiter.fbMPSInterface.q_BC_ASSERTION_LINES[6], TIID^Device 1 (EtherCAT)^E0 (EK1200)^PMPS_Premp, Channel 6^Output
        KFEArbiter Instance, PlcTask Outputs^PMPS_Arbiter.fbMPSInterface.q_BC_ASSERTION_LINES[7], TIID^Device 1 (EtherCAT)^E0 (EK1200)^PMPS_Premp, Channel 7^Output
        KFEArbiter Instance, PlcTask Outputs^PMPS_Arbiter.plc_kfe_gatt_PMPS_IO.o_CurrentBP, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-gatt, IO Outputs^CurrentBP
        KFEArbiter Instance, PlcTask Outputs^PMPS_Arbiter.plc_kfe_gmd_PMPS_IO.o_CurrentBP, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-gmd-vac-01, IO Outputs^CurrentBP
        KFEArbiter Instance, PlcTask Outputs^PMPS_Arbiter.plc_kfe_motion_PMPS_IO.o_CurrentBP, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-motion, IO Outputs^CurrentBP
        KFEArbiter Instance, PlcTask Outputs^PMPS_Arbiter.plc_kfe_vac_PMPS_IO.o_CurrentBP, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-vac, IO Outputs^CurrentBP
        KFEArbiter Instance, PlcTask Outputs^PMPS_Arbiter.plc_kfe_xgmd_PMPS_IO.o_CurrentBP, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-xgmd-vac-01, IO Outputs^CurrentBP
        KFEArbiter Instance, PlcTask Outputs^PMPS_Arbiter.plc_rix_mot_PMPS_IO.o_CurrentBP, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^B940-009-R07-MPS-1 CU1-ESC2^plc-rix-mot, IO Outputs^CurrentBP
        KFEArbiter Instance, PlcTask Outputs^PMPS_Arbiter.plc_rix_optics_PMPS_IO.o_CurrentBP, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^B940-009-R07-MPS-1 CU1-ESC2^plc-rix-optics, IO Outputs^CurrentBP
        KFEArbiter Instance, PlcTask Outputs^PMPS_Arbiter.plc_rix_vac_PMPS_IO.o_CurrentBP, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^B940-009-R07-MPS-1 CU1-ESC2^plc-rix-vac, IO Outputs^CurrentBP
        KFEArbiter Instance, PlcTask Outputs^PMPS_Arbiter.plc_tmo_motion_PMPS_IO.o_CurrentBP, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-tmo-mot, IO Outputs^CurrentBP
        KFEArbiter Instance, PlcTask Outputs^PMPS_Arbiter.plc_tmo_optics_PMPS_IO.o_CurrentBP, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-tmo-optics, IO Outputs^CurrentBP
        KFEArbiter Instance, PlcTask Outputs^PMPS_Arbiter.plc_tmo_vacuum_PMPS_IO.o_CurrentBP, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-tmo-vac, IO Outputs^CurrentBP
        KFEArbiter Instance, PlcTask Outputs^P_AT1K0_SL1K0.q_nTranToAT1K0Req, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-gatt, IO Outputs^Requested Transmission
        KFEArbiter Instance, PlcTask Outputs^P_AT1K0_SL1K0.q_stAptArrayReq, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-motion, IO Outputs^AptArrayReq
        KFEArbiter Instance, PlcTask Outputs^P_SATT.q_SattArrayReq, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^B940-009-R07-MPS-1 CU1-ESC2^plc-rix-mot, IO Outputs^SattArrayReq
        KFEArbiter Instance, PlcTask Outputs^P_SATT.q_SattArrayReq, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-motion, IO Outputs^SattArrayReq
        OutputSrc, MachineSimulation.q_SimCurrBP, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 3 (EK1122)^SubSysPLC1 (EL6692), IO Outputs^CurrentBP
        OutputSrc, PMPS_Arbiter.fbMPSInterface.dumb, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^PMPS_BC, Channel 1^Output
        OutputSrc, PMPS_Arbiter.fbMPSInterface.q_BC_ASSERTION_LINES[10], TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^PMPS_Premp, Channel 10^Output
        OutputSrc, PMPS_Arbiter.fbMPSInterface.q_BC_ASSERTION_LINES[11], TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^PMPS_Premp, Channel 11^Output
        OutputSrc, PMPS_Arbiter.fbMPSInterface.q_BC_ASSERTION_LINES[12], TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^PMPS_Premp, Channel 12^Output
        OutputSrc, PMPS_Arbiter.fbMPSInterface.q_BC_ASSERTION_LINES[13], TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^PMPS_Premp, Channel 13^Output
        OutputSrc, PMPS_Arbiter.fbMPSInterface.q_BC_ASSERTION_LINES[14], TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^PMPS_Premp, Channel 14^Output
        OutputSrc, PMPS_Arbiter.fbMPSInterface.q_BC_ASSERTION_LINES[15], TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^PMPS_Premp, Channel 15^Output
        OutputSrc, PMPS_Arbiter.fbMPSInterface.q_BC_ASSERTION_LINES[16], TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^PMPS_Premp, Channel 16^Output
        OutputSrc, PMPS_Arbiter.fbMPSInterface.q_BC_ASSERTION_LINES[9], TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^PMPS_Premp, Channel 9^Output
        OutputSrc, PMPS_Arbiter.fbSubSys1_Requestor.o_CurrentBP, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 3 (EK1122)^SubSysPLC1, IO Outputs^CurrentBP
        OutputSrc, PMPS_Arbiter.fbSubSys1_Requestor.o_CurrentBP, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 3 (EK1122)^SubSysPLC1, IO Outputs^CurrentBP
        OutputSrc, PMPS_Arbiter.fbSubSys2_Requestor.o_CurrentBP, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 3 (EK1122)^SubSysPLC2, IO Outputs^CurrentBP
        OutputSrc, PMPS_Arbiter.fbSubSys2_Requestor.o_CurrentBP, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 3 (EK1122)^SubSysPLC2, IO Outputs^CurrentBP
        OutputSrc, PMPS_Arbiter.lfe_PMPS_IO.o_CurrentBP, TIID^Device 1 (EtherCAT)^Box 23 (CU1128)^plc-lfe-motion, IO Outputs^CurrentBP
        OutputSrc, P_AT1K0_SL1K0.q_nTranToAT1K0Req, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^plc-kfe-gatt, IO Outputs^Requested Transmission
        OutputSrc, P_SATT.q_nTranSattReq, TIID^Device 1 (EtherCAT)^B940-009-R07-MPS-1 CU1-ESC1^B940-009-R07-MPS-1 CU1-ESC2^plc-rix-mot, IO Outputs^SattArrayReq
